[gd_scene load_steps=2 format=3 uid="uid://buuwrpmwse6qn"]

[ext_resource type="Script" path="res://entities/Components/EdgeCorrection/edge_correction_component.gd" id="1_aug32"]

[node name="EdgeCorrectionComponent" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_aug32")
player = NodePath("")

[node name="left_out" type="RayCast2D" parent="."]
position = Vector2(-10, 4)
target_position = Vector2(0, -18)
collision_mask = 2

[node name="left_in" type="RayCast2D" parent="."]
position = Vector2(-3, 4)
target_position = Vector2(0, -18)
collision_mask = 2

[node name="right_in" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(0, -18)
collision_mask = 2

[node name="right_out" type="RayCast2D" parent="."]
position = Vector2(7, 4)
target_position = Vector2(0, -18)
collision_mask = 2
